--- a/src/modules/rheader/_variables.scss
+++ b/src/modules/rheader/_variables.scss
@@ -1,4 +1,4 @@
-$rheader-small-max:  600px;
+$rheader-small-max:  767px;
 $rheader-medium-min: $rheader-small-max + 1px;
 $rheader-medium-max: 1160px;
 $rheader-large-min:  $rheader-medium-max + 1px;
